# zero2prod-rs

./: .dockerignore  .gitignore  .spec.yaml  Cargo.toml  Dockerfile  Makefile  README.md  configuration.yml  spec.yaml  sqlx-data.json
.github/workflows/: audit-on-push.yml  general.yml  scheduled-audit.yml
configurations/: base.yaml  local.yaml  production.yaml
migrations/: 20220110055501_make_status_not_null_in_subscriptions.sql  20220110061408_create_subscription_token_table.sql  20220614204010_create_users_table.sql  20220803024401_seed_user.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
