[package]
name = "z2p"
version = "0.1.0"
authors = ["Collins Muriuki <hello@collinsmuriuki.xyz>"]
edition = "2018"

[package.metadata.precommit]
fmt = "cargo fmt 2>&1"
test = "cargo test 2>&1"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "z2p"

[dependencies]
actix-http = "=3.0.0-beta.9"
actix-web = "=4.0.0-beta.8"
anyhow = "1.0.57"
argon2 = {version = "0.3", features = ["std"]}
base64 = "0.13"
chrono = "0.4.15"
config = "0.11.0"
htmlescape = "0.3"
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
secrecy = { version = "0.8", features = ["serde"] }
serde = {version="1", features=["derive"]}
tracing = {version= "0.1", features=["log"]}
tracing-actix-web = "0.4.0-beta.8"
tracing-bunyan-formatter = "0.2.6"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = {version="0.2.12", features = ["env-filter", "registry"]}
urlencoding = "2"
uuid = {version = "0.8.1", features = ["v4"]}
rand = {version = "0.8", features=["std_rng"]}
serde-aux = "2.3.0"
unicode-segmentation = "1.8.0"
validator = "0.14.0"
thiserror = "1.0.30"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls", 
    "macros",
    "offline",
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate"
]

[dev-dependencies]
actix-rt = "2"
claim = "0.5.0"
fake = "~2.3"
linkify = "0.5.0"
once_cell = "1.8.0"
pre-commit = "0.5.2"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1"
tokio = {version = "1", features = ["rt", "macros"]}
wiremock = "0.5"
